Editable options restricted for richtext field type (reference prominic/Moonshine-IDE#670)

--- a/src/view/dominoFormBuilder/FormFieldDescriptor.mxml
+++ b/src/view/dominoFormBuilder/FormFieldDescriptor.mxml
@@ -120,10 +120,24 @@
 				{
 					rbgMultivalue.selectedIndex = 1;
 					rbMultiYes.enabled = false;
+					updateEditableProvider(FormBuilderEditableType.editableTypesRichtext);
 				}
 				else if (!rbMultiYes.enabled)
 				{
 					rbMultiYes.enabled = true;
+					updateEditableProvider(FormBuilderEditableType.editableTypes);
+				}
+				
+				/*
+				 @local
+				 */
+				function updateEditableProvider(value:ArrayList):void
+				{
+					ddlEditable.dataProvider = value;
+					ddlEditable.callLater(function():void
+					{
+						ddlEditable.dispatchEvent(new IndexChangeEvent(IndexChangeEvent.CHANGE));
+					});
 				}
 			}
 			
