- Updated sort-value generation and save to DXL - Include in View option managed - Added row drag reordering (reference prominic/Moonshine-IDE#670)

--- a/src/components/renderers/GenericGridRenderer.mxml
+++ b/src/components/renderers/GenericGridRenderer.mxml
@@ -13,8 +13,11 @@
 				if ( value ) {
 					super.data = value;
 					
-					// priority to the labelFunction if any
-					lbl.text = (this.column.labelFunction != null) ? this.label : data[ this.column.dataField ];
+					if (this.column)
+					{
+						// priority to the labelFunction if any
+						lbl.text = (this.column.labelFunction != null) ? this.label : data[ this.column.dataField ];
+					}
 				}
 			}
 			
